[gd_scene load_steps=10 format=2]

[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/menus/upgrades/upgrade_ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/menus/ingame/upgrades_ui.gd" type="Script" id=3]
[ext_resource path="res://resources/fonts/actual/base/font_big_title.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/menus/shop/stats_container.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/menus/shop/stat_popup.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/menus/global/focus_manager.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/menus/shop/button_with_icon.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/menus/shop/reroll_button.gd" type="Script" id=9]

[node name="UpgradesUI" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( -312, -488 )
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="AttenuateBackground" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.686275 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Control" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1888.0
margin_bottom = 1048.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Content"]
margin_right = 1856.0
margin_bottom = 1016.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/Content/VBoxContainer"]
margin_right = 1867.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 4 )
text = "LEVEL_UP"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Content/VBoxContainer"]
margin_top = 77.0
margin_right = 1867.0
margin_bottom = 1423.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Content/VBoxContainer/HBoxContainer2"]
margin_right = 1468.0
margin_bottom = 1346.0
rect_min_size = Vector2( 0, 780 )
custom_constants/separation = 50
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Content/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 510.0
margin_right = 1468.0
margin_bottom = 721.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeUI" parent="MarginContainer/Content/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 361.0
margin_bottom = 211.0

[node name="UpgradeUI2" parent="MarginContainer/Content/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 369.0
margin_top = 0.0
margin_right = 730.0
margin_bottom = 211.0

[node name="UpgradeUI3" parent="MarginContainer/Content/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 738.0
margin_top = 0.0
margin_right = 1099.0
margin_bottom = 211.0

[node name="UpgradeUI4" parent="MarginContainer/Content/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1107.0
margin_top = 0.0
margin_right = 1468.0
margin_bottom = 211.0

[node name="RerollButton" parent="MarginContainer/Content/VBoxContainer/HBoxContainer2/VBoxContainer" instance=ExtResource( 8 )]
margin_left = 719.0
margin_top = 771.0
margin_right = 749.0
margin_bottom = 836.0
size_flags_horizontal = 4
script = ExtResource( 9 )

[node name="StatsContainer" parent="MarginContainer/Content/VBoxContainer/HBoxContainer2" instance=ExtResource( 5 )]
margin_left = 1483.0
margin_top = 0.0
margin_right = 1867.0
margin_bottom = 1346.0
rect_min_size = Vector2( 384, 740 )
size_flags_vertical = 0

[node name="StatPopup" parent="MarginContainer/Content" instance=ExtResource( 6 )]
visible = false
margin_top = 929.0
margin_right = 1856.0
margin_bottom = 929.0

[node name="FocusManager" parent="." instance=ExtResource( 7 )]

[node name="ButtonDelayTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="visibility_changed" from="." to="." method="_on_UpgradesUI_visibility_changed"]
[connection signal="pressed" from="MarginContainer/Content/VBoxContainer/HBoxContainer2/VBoxContainer/RerollButton" to="." method="_on_RerollButton_pressed"]
[connection signal="timeout" from="ButtonDelayTimer" to="." method="_on_ButtonDelayTimer_timeout"]
